--- a/src/app/fruits/edit/edit.component.html
+++ b/src/app/fruits/edit/edit.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <legend>Create Item</legend>
+    <legend>Edit Item</legend>
     <form>
       <div class="mb-3">
         <label for="txtName" class="form-label">Name</label>
@@ -13,6 +13,6 @@
         <label for="txtQuantity" class="form-label">Quantity</label>
         <input type="number" name="quantity" [(ngModel)] = "fruitForm.quantity" class="form-control" id="txtQuantity" />
       </div>
-      <button type="button" (click)="create()" class="btn btn-primary">Create</button>
+      <button type="button" (click)="update()" class="btn btn-primary">Update</button>
     </form>
-  </div>
+</div>
